# Analyst

./: .eslintrc.cjs  .gitignore  BRUTALLY_HONEST_HANDOVER.md  GENESIS_SPRINT_REVIEW.md  LICENSE  OLYMPUS_SPRINT_VICTORY.md  PHASE1_BRUTALLY_HONEST_HANDOVER.md  README.md  eslint.config.cjs  index.html  package-lock.json  package.json  tsconfig.json
ai_core/: bridge_analyze_data.py  bridge_dashboard_insights.py  bridge_generate_sql.py  bridge_plan_hypothesis.py  hello.py  pyproject.toml  test_minimal.py  test_minimal_import.py  test_simple.py  test_victory.py
ai_core/app/: main.py
ai_core/core/: __init__.py  hypothesis_deconstructor.py
ai_core/oracle/: hypothesis.py  llm.py
ai_core/shelby_ai_core.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
ai_core/tests/: test_analyze.py  test_api.py  test_dashboard_insights.py  test_hypothesis.py
core/: hypothesis_deconstructor_simple.py
docs/: Pantheon_Audit_Report.md
project/: package-lock.json  package.json  tsconfig.tsbuildinfo  vitest.config.ts
project/src/: main.tsx
project/src-tauri/: Cargo.toml  tauri.conf.json
project/src-tauri/src/: lib.rs
src/: app.test.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src/collab/: engine.test.ts  engine.ts
src/dashboard/: DashboardCreator.test.tsx  DashboardCreator.tsx
src/excel/: ExcelAnalyst.analyze.test.tsx  ExcelAnalyst.integration.test.tsx  ExcelAnalyst.tsx
src/hypothesis/: HypothesisFlow.integration.test.tsx
src/sdk/: registry.test.tsx  registry.tsx
src/sql/: ConnectionManager.test.tsx  (+7 more)
tests/: test_hypothesis_deconstructor.py
(+33 files in other folders)
