[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shelby_ai_core"
version = "0.1.0"
description = "The sovereign AI core for the Symbiotic Analysis Environment."
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "python-dotenv",
    "pytest",
    "pytest-asyncio",
    "httpx",
    "tinydb",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]

[tool.pytest.ini_options]
pythonpath = "."
asyncio_mode = "auto"
